force-app/main/default/objects/Loan_Application__c/Loan_Application__c.object-meta.xml
<CustomObject>
    <description>Tracks an SMB/mid-market credit application through analyst review: applicant link, self-reported vs verified financials, policy grounding confidence, credit memo draft, and escalation.</description>
    <label>Loan Application</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Loan Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>