force-app/main/default/objects/Loan_Application__c/fields/Borrower_Type__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Type__c</fullName>
    <description>Drives which compliance regime applies to this file — ASIC RG 209 responsible lending obligations apply to Consumer, not Business.</description>
    <label>Borrower Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>