force-app/main/default/objects/Loan_Application__c/fields/Credit_Memo_Draft__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Draft__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Agent-generated credit memo draft (Action #6). Narrates applicant financials, so classified at the same sensitivity as the source figures. This is the evidence write the agent is permitted to make — never the approve/deny verdict.</description>
    <label>Credit Memo Draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>