force-app/main/default/objects/Loan_Application__c/fields/Current_Credit_Checks__c.field-meta.xml
<CustomField>
    <fullName>Current_Credit_Checks__c</fullName>
    <description>Count of Credit Checks on this application currently marked Is_Latest__c. Exists so the grounding confidence calc can see the bureau signal from a before-save flow, which cannot query child records. Recalculates automatically when CreditBureauService inserts a check and flips the previous one, which re-fires the confidence flow and refreshes the band without any extra automation. Normally 0 or 1 — a value above 1 means the Is_Latest__c pointer has been left inconsistent.</description>
    <label>Current Credit Checks</label>
    <summaryFilterItems>
        <field>Credit_Check__c.Is_Latest__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Credit_Check__c.Loan_Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>