force-app/main/default/objects/Loan_Application__c/fields/Declared_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Declared_Annual_Revenue__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Self-reported annual revenue, from the application form. Compared against Verified_Annual_Revenue__c for the ASIC-verify disparity check.</description>
    <label>Declared Annual Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>