force-app/main/default/objects/Loan_Application__c/fields/Declared_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Declared_Net_Income__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Self-reported net income, from the application form.</description>
    <label>Declared Net Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>