force-app/main/default/objects/Loan_Application__c/fields/DSCR__c.field-meta.xml
<CustomField>
    <fullName>DSCR__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Debt Service Coverage Ratio, derived from verified financials.</description>
    <label>DSCR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>