force-app/main/default/objects/Loan_Application__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <description>Deterministic reason string for why the file is currently routed to a senior analyst (e.g. low grounding confidence, financial disparity). Kept factual/system-generated, not narrative, so it isn&apos;t itself a PII leak vector. Reflects the CURRENT assessment, not the original routing — the escalation flow rewrites it on every re-assessment so it cannot drift out of step with the fields beside it. The record of why the file was originally routed lives in field history, which is why this is Text(255) rather than a Long Text Area: history stores old and new values at 255 characters or fewer, but records only &quot;edited&quot; above that.</description>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>