force-app/main/default/objects/Loan_Application__c/fields/Financial_Disparity_Flag__c.field-meta.xml
<CustomField>
    <fullName>Financial_Disparity_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deterministic flag (set by Flow/Apex, not the LLM) when |declared - verified| / verified exceeds the policy threshold. A flag, not the underlying figures — kept at Internal classification.</description>
    <label>Financial Disparity Flag</label>
    <type>Checkbox</type>
</CustomField>