force-app/main/default/objects/Loan_Application__c/fields/Financial_Disparity_Percent__c.field-meta.xml
<CustomField>
    <fullName>Financial_Disparity_Percent__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Magnitude of declared-vs-verified variance. Classified Restricted (not just Internal like the flag) because the percentage reveals the scale of the underlying financials even without the raw figures.</description>
    <label>Financial Disparity Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>