force-app/main/default/objects/Loan_Application__c/fields/Grounding_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Confidence__c</fullName>
    <description>Retrieval-grounding confidence signal (Action #5) — not a credit-risk judgment. Feeds the escalation threshold.</description>
    <label>Grounding Confidence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>