force-app/main/default/objects/Loan_Application__c/fields/Grounding_Signals_Missing__c.field-meta.xml
<CustomField>
    <fullName>Grounding_Signals_Missing__c</fullName>
    <description>Names the evidence signals absent from this application at the time confidence was last computed, e.g. &quot;verified financials; current credit check&quot;. Written by the grounding confidence flow so the escalation reason and the agent&apos;s evidence trail can state WHY confidence is low without re-deriving the signal logic in a second place. Empty when confidence is High. Records which evidence is missing, never any figure, so it stays Internal rather than Restricted.</description>
    <inlineHelpText>Which evidence was missing when confidence was last computed</inlineHelpText>
    <label>Grounding Signals Missing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>