force-app/main/default/objects/Loan_Application__c/fields/Loan_Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Requested__c</fullName>
    <label>Loan Amount Requested</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>