force-app/main/default/objects/Loan_Application__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working_Capital</fullName>
                <label>Working Capital</label>
            </value>
            <value>
                <fullName>Equipment_Finance</fullName>
                <label>Equipment Finance</label>
            </value>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Trade_Finance</fullName>
                <label>Trade Finance</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>