force-app/main/default/objects/Loan_Application__c/fields/Needs_Financial_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Financial_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by the statement extraction intake automation when an uploaded financial statement could not be read confidently enough to trust — low model confidence, a missing figure, or an unparseable response. Deliberately separate from Escalated__c: that flag means the agent routed an assessment to a senior analyst, whereas this one means intake could not produce a verified figure in the first place. Kept at Internal classification because it reveals nothing about the underlying financials.</description>
    <label>Needs Financial Review</label>
    <type>Checkbox</type>
</CustomField>