force-app/main/default/objects/Loan_Application__c/fields/Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Type__c</fullName>
    <description>Secured vs unsecured, distinct from Borrower_Type__c (business/consumer) and Loan_Purpose__c. Combined with those two, this is the secured_business/secured_personal/unsecured_business/unsecured_personal segmentation used for policy-PDF pre-filtering.</description>
    <label>Security Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>