force-app/main/default/objects/Loan_Application__c/fields/Statement_Extraction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Statement_Extraction_Notes__c</fullName>
    <description>Audit trail for statement extraction: timestamp, ContentDocument Id, file title, model confidence, the write/reject outcome, and the model's own source_notes. Newest entry first. Internal rather than Restricted — it records which figures were accepted and why, not the figures themselves.</description>
    <label>Statement Extraction Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>