force-app/main/default/objects/Loan_Application__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Submission Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>