force-app/main/default/objects/Loan_Application__c/fields/Verified_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Verified_Annual_Revenue__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Annual revenue extracted from the uploaded financial statements (Action #3). This is the verified figure the ASIC-verify obligation relies on.</description>
    <label>Verified Annual Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>