force-app/main/default/objects/Loan_Application__c/fields/Verified_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Verified_Net_Income__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <description>Net income extracted from the uploaded financial statements (Action #3).</description>
    <label>Verified Net Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>