force-app/main/default/objects/Loan_Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Applicant__c</columns>
    <columns>Loan_Amount_Requested__c</columns>
    <columns>Loan_Purpose__c</columns>
    <columns>Security_Type__c</columns>
    <columns>Borrower_Type__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Financial_Disparity_Flag__c</columns>
    <columns>Submission_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>